# dweb_flask

./: config.py  movies.db  pyproject.toml
app/: __init__.py
app/modules/categories/: controllers.py  forms.py  models.py
app/modules/core/: controllers.py  models.py
app/modules/movies/: controllers.py  forms.py  models.py
app/modules/users/: controllers.py  forms.py  models.py
app/templates/: 404.html
app/templates/categories/: detail.html  form.html  list.html  update.html
app/templates/core/: base.html  index.html
app/templates/movies/: detail.html  form.html  list.html  update.html
app/templates/users/: login.html  signup.html
